# test-semantic-release-for-kodi

./: CHANGELOG.md  DECISIONS.md  README.md  REFACTOR-KODI-ADDON-TOOL.md  addon.xml  pyproject.toml  update_addon.py
.github/workflows/: release.yml
script.module.test-semantic-release-for-kodi/: addon.xml
script.module.test-semantic-release-for-kodi/lib/: __init__.py
scripts/: release.sh
templates/: addon.xml.j2
