[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-semantic-release-for-kodi"
version = "0.1.0"
description = "Test repo for prototyping semantic-release with Kodi addon features"
authors = [{name = "Test Author"}]
dependencies = []

[tool.setuptools]
packages = []

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = false
commit_parser = "semantic_release.commit_parser.ConventionalCommitParser"
commit_parser_options = { minor_tags = ["feat"], patch_tags = ["fix"] }
changelog = { template_dir = "templates", changelog_file = "CHANGELOG.md" }