[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-semantic-release-for-kodi"
version = "0.2.0"
description = "Test repo for prototyping semantic-release with Kodi addon features"
authors = [{name = "Test Author"}]
dependencies = []

[tool.setuptools]
packages = []

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = "echo 'no build'"
allow_zero_version = true
commit_parser = "semantic_release.commit_parser:ConventionalCommitParser"
commit_parser_options = { minor_tags = ["feat"], patch_tags = ["fix"] }
changelog = { default_templates = { changelog_file = "CHANGELOG.md" }, templates = [ { template_file = "addon.xml.j2", output_file = "addon.xml" } ] }